--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "config": "^3.3.1",
+    "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "uuid": "^7.0.3"
